# apt-finder

./: .env.example  .gitignore  README.md  main.py  notion.py  preferences.example.md  pyproject.toml  search.py  sheet.py  test_browse.py  test_evaluate.py
tests/: test_pagination.py
