[project]
name = "apt-finder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser-use>=0.12.0",
    "click>=8.0",
]

[project.scripts]
apt = "search:cli"

[tool.setuptools]
py-modules = ["search"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.4",
]
